maybe fixed jumping hover button

--- a/website/static/css/custom-diffview.css
+++ b/website/static/css/custom-diffview.css
@@ -9,6 +9,11 @@
 .pager li {
 	padding: 0;
 }
+
+.pager li a {
+	border-bottom: 1px;
+}
+
 @media (max-width: 768px){
 	.pager .next > a, .pager .previous > a {
 		float: none;
